--- a/src/index.css
+++ b/src/index.css
@@ -961,6 +961,7 @@ h1 {
     color: var(--text_color);
 
     font-family: "Researcher_WOFF2";
+    font-size: clamp(0.9rem, 2vw, 1.2rem);
 }
 
 .SearchBar_Input_Container {
@@ -1150,6 +1151,7 @@ h1 {
     text-align: center;
 
     font-family: "Researcher_WOFF2";
+    font-size: clamp(0.9rem, 2vw, 1.2rem);
 }
 
 .Cart_List {
@@ -2751,7 +2753,9 @@ h1 {
     z-index: -3;
 }
 
-.Product_Main_Image {
+.Robot_Card_Main_Image {
+    top: 6rem;
+    object-fit: contain;
 }
 
 .Card_Product_Description {
@@ -3166,6 +3170,21 @@ h1 {
     width: 100%;
     max-width: 300px;
     text-transform: uppercase;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.Product_Detail_Solution_Img {
+    max-width: 60px;
+    max-height: 60px;
+    object-fit: cover;
+    filter: invert(99%) sepia(99%) saturate(0%) hue-rotate(190deg) brightness(107%) contrast(100%);
+}
+
+.darkmode .Product_Detail_Solution_Img {
+    filter: none;
 }
 
 .Product_Detail_Solution:focus,
