--- a/src/index.css
+++ b/src/index.css
@@ -259,8 +259,8 @@ h1 {
 }
 
 .Navbar_Logo {
-    width: 50px;
-    height: 50px;
+    height: calc(1rem + 3vh);
+    width: calc(1rem + 3vh);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -410,6 +410,10 @@ h1 {
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     position: relative;
+}
+
+.Navbar_Tool span {
+    font-size: calc(0.5rem + 1.5vh);
 }
 
 .Navbar_Tool::after {
@@ -1831,6 +1835,10 @@ h1 {
     transform: translate3d(0, 0, 0);
 }
 
+.Mapa_Container {
+    height: calc(var(--section_viewer_height) - var(--small_gap));
+}
+
 .Solution_Detail_Container {
     z-index: 8;
     position: absolute;
@@ -2053,6 +2061,7 @@ h1 {
     bottom: var(--small_gap);
     background: linear-gradient(to right, var(--bg_color), transparent);
     z-index: 2;
+    pointer-events: none;
 }
 
 .carroussel_left_fade {
@@ -2518,7 +2527,7 @@ h1 {
 
 .LP_Section_03_Produtos {
     flex-direction: column;
-    padding: var(--small_gap);
+    padding-inline: var(--small_gap);
     gap: 0;
     overflow: hidden;
 }
@@ -2639,7 +2648,8 @@ h1 {
     outline: none;
     border-radius: var(--small_gap);
     flex: 1;
-    min-width: 250px;
+    min-width: 350px;
+    max-width: 500px;
     position: relative;
     overflow: hidden;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
@@ -2888,7 +2898,7 @@ h1 {
 
 .LP_Section_04_Contato {
     padding: var(--small_gap);
-    flex-direction: column;
+    flex-direction: row;
     justify-content: start;
     align-items: center;
     overflow-y: auto;
@@ -2901,7 +2911,6 @@ h1 {
     text-align: center;
     gap: 0.5rem;
     max-width: 900px;
-    margin-top: auto;
 }
 
 .Chamada_Contato {
@@ -2918,7 +2927,6 @@ h1 {
     align-items: center;
     gap: 0.75rem;
     width: 100%;
-    margin-bottom: auto;
 }
 
 .Info_Contato {
@@ -3008,6 +3016,7 @@ h1 {
 /* SOLUTION CONTAINERS */
 .LP_Section_03_Solucoes {
     gap: 0;
+    padding-inline: var(--small_gap);
 }
 
 .Solution_Viewer {
@@ -3020,6 +3029,7 @@ h1 {
     overflow-x: hidden;
     text-align: center;
     border-radius: var(--small_gap);
+    padding-block: 0.5rem;
 }
 
 .Solution_Card {
@@ -3376,12 +3386,14 @@ h1 {
 
 /* BIG SCREENS */
 @media only screen and (min-width: 2000px) {
-
 }
 
 /* SMALL AND MEDIUM DESKTOP */
 
 @media only screen and (max-width: 1440px) {
+    :root {
+        --section_viewer_height: calc(90vh);
+    }
 
     /* NAVBAR */
     .Navbar {
@@ -3550,7 +3562,6 @@ h1 {
         max-width: 200px;
     }
 
-
     .LP_Section_01_Inicio {
         padding: var(--small_gap);
         justify-content: center;
@@ -3569,7 +3580,7 @@ h1 {
     }
 
     .Product_Card {
-        min-width: 300px;
+        min-width: 350px;
     }
 
     .LP_Section_04_Contato {
@@ -3585,6 +3596,20 @@ h1 {
         padding: 0.3rem;
 
         border-bottom: 2px solid var(--text_color);
+    }
+
+    .Footer {
+        display: none;
+    }
+
+    .Content_Viewer {
+        height: calc(90vh - var(--small_gap));
+    }
+}
+
+@media only screen and (min-width: 1540px) {
+    .Secondary_Media_Container {
+        display: none;
     }
 }
 
@@ -3616,6 +3641,14 @@ h1 {
         flex: 0;
     }
 
+    .LP_Section_04_Contato {
+        padding: var(--small_gap);
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        overflow-y: auto;
+    }
+
     .Footer {
         gap: var(--small_gap);
         padding: var(--small_gap);
@@ -3632,12 +3665,10 @@ h1 {
         align-items: start;
         gap: 0;
     }
-
 }
 
 /* MOBILE */
 @media only screen and (max-width: 768px) {
-
     .Product_Detail_Content {
         width: 100%;
         height: 100%;
@@ -3728,12 +3759,20 @@ h1 {
     .Solution_Card {
         padding: var(--small_gap);
     }
-
 }
 
 /* MICRO SCREENS */
 @media only screen and (max-width: 480px) {
+}
 
+@media only screen and (max-height: 800px) {
+    .Footer {
+        display: none;
+    }
+
+    .Content_Viewer {
+        height: calc(90vh - var(--small_gap));
+    }
 }
 
 /* Safari Override */
