--- a/src/index.css
+++ b/src/index.css
@@ -560,16 +560,22 @@ h1 {
     text-transform: uppercase;
 }
 
-.Menu_List_Container {
-    width: 100%;
-    flex: 1;
+.Menu_Div {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
     gap: var(--small_gap);
-    flex-shrink: 0;
+    width: 100%;
+}
+
+.Menu_List_Container {
+    margin-block: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    gap: var(--small_gap);
     overflow-y: auto;
+    padding: var(--small_gap);
 }
 
 .SiteMap_LP_Links_Container {
@@ -585,7 +591,7 @@ h1 {
 }
 
 .LP_Links_Container {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -620,6 +626,7 @@ h1 {
     font-weight: 600;
     text-decoration: none;
     color: var(--text_color);
+    font-size: clamp(calc(0.6rem + 0.5vw), 1vw, 0.8rem);
 
     transition: all 0.2s ease-in-out;
 }
@@ -633,6 +640,7 @@ h1 {
     gap: 0.25rem;
     text-transform: uppercase;
     font-weight: 600;
+    font-size: clamp(calc(0.5rem + 0.5vw), 1vw, 0.8rem);
     text-decoration: none;
     color: var(--text_color);
 
@@ -713,7 +721,7 @@ h1 {
 }
 
 .Secondary_Links {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -725,7 +733,7 @@ h1 {
 }
 
 .Configurations {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -733,6 +741,7 @@ h1 {
     padding: var(--small_gap);
     border: 1px solid var(--text_color);
     border-radius: var(--small_gap);
+    margin-bottom: auto;
 }
 
 .Configurations_Header {
@@ -749,7 +758,7 @@ h1 {
 }
 
 .Config_Link {
-    font-size: clamp(0.8rem, 1vw, 1rem);
+    font-size: clamp(calc(0.6rem + 0.5vw), 1vw, 0.8rem);
     gap: 0.5rem;
 }
 
@@ -2567,6 +2576,7 @@ h1 {
     gap: clamp(0.5rem, 1vw, 1rem);
     padding: 0.5rem;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-behavior: smooth;
 }
 
@@ -2592,9 +2602,13 @@ h1 {
 .Product_Type.active,
 .Product_Type:focus,
 .Product_Type:hover {
-    background-color: var(--anchor_hover_color);
+    background-color: var(--hr_azul_escuro);
     color: var(--text_color);
-    scale: 1.05;
+    transform: translateY(-0.5rem);
+}
+
+.Product_Type.active {
+    background-color: var(--anchor_hover_color);
 }
 
 .Product_Type_Title {
@@ -2841,6 +2855,7 @@ h1 {
     overflow: hidden;
     color: var(--text_color);
     font-weight: 600;
+    max-width: none;
 
     position: absolute;
     bottom: 0;
@@ -3433,22 +3448,10 @@ h1 {
         border-radius: 0;
     }
 
-    .Menu_List_Container {
-        flex: 1;
-        overflow-y: auto;
-        padding-inline: var(--small_gap);
-    }
-
     .LP_Links_Container,
     .Secondary_Links,
     .Configurations {
-        flex-shrink: 0;
         width: 100%;
-    }
-
-    .Menu_List_Container {
-        margin-top: var(--small_gap);
-        justify-content: start;
     }
 
     .Secondary_Links {
@@ -3586,11 +3589,12 @@ h1 {
     }
 
     .Product_Card {
-        min-width: 350px;
+        min-width: 325px;
     }
 
     .LP_Section_04_Contato {
-        padding: var(--small_gap);
+        padding-block: 0;
+        padding-inline: 1rem;
         justify-content: space-between;
         gap: 0.5rem;
     }
@@ -3667,6 +3671,10 @@ h1 {
 
 /* MOBILE */
 @media only screen and (max-width: 768px) {
+    .Menu_List_Container {
+        flex-direction: column;
+    }
+
     .Product_Detail_Content {
         width: 100%;
         height: 100%;
